<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="UnusedResources">

    <string name="app_name">Course Organizer</string>
    <string name="startup_welcome">Welcome</string>
    <string name="year_year">Year</string>
    <string name="year_gpa">GPA</string>
    <string name="semester_semester">Semester</string>
    <string name="item_item">Items</string>
    <string name="inputitems_grade">Grade(%): </string>
    <string name="inputitems_hint">95.4</string>
    <string name="inputcriteria_weight">Weight: </string>
    <string name="criteria_criteria">Criteria</string>
    <string name="course_course">Course</string>
    <string name="year_addyear">Add a Year</string>
    <string name="semester_addsemester">Add a Semester</string>
    <string name="course_addcourse">Add a Course</string>
    <string name="criteria_addcriteria">Add a Criterion</string>
    <string name="items_additems">Add an Item</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="delete">DELETE</string>
    <string name="course_name_hint">Course Name</string>
    <string name="year_name_hint">2013</string>
    <string name="input_grade_scale">Grade Scale</string>
    <string name="a_plus">A+    97.0</string>
    <string name="a">A    93.0</string>
    <string name="a_minus">A-    90.0</string>
    <string name="b_plus">B+    87.0</string>
    <string name="b">B    83.0</string>
    <string name="b_minus">B-    80.0</string>
    <string name="c_plus">C+    77.0</string>
    <string name="c">C    73.0</string>
    <string name="c_minus">C-    70.0</string>
    <string name="d_plus">D+    67.0</string>
    <string name="d">D    63.0</string>
    <string name="d_minus">D-    60.0</string>
    <string name="homework">Homework</string>
    <string name="name">Name</string>
    <string name="logo">logo</string>
    <string name="three">3</string>
    <string name="credit_hours">Credit Hours</string>
    <string name="spring">Spring</string>

</resources>