<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/et_itemname"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />
    
    <TextView 
        android:id="@+id/tv_itemscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputitems_grade"
        android:hint="@string/inputitems_hint"
        android:layout_below="@id/et_itemname"/>
    
    <EditText 
        android:id="@+id/et_itemscore"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_toRightOf="@id/tv_itemscore"
        android:layout_below="@id/et_itemname" />

</RelativeLayout>